Login + currentUser works